<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.moneywellspent.addexpense.AddExpenseViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".addexpense.AddExpenseFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/category_select"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/expense_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:icon="@{viewModel.category.image}"
                    tools:src="@drawable/ic_health" />

                <TextView
                    android:id="@+id/expense_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@{viewModel.category.name}"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    tools:text="Health" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_calender_light"
                    app:tint="@color/green_500" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/date_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="8dp">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:formatDate="@{viewModel.data}"
                        tools:text="12/5/2021" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/time_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:formatTime="@{viewModel.time}"
                        android:textSize="22sp"
                        tools:text="09:50 AM" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/add_expense" />
    </LinearLayout>
</layout>